# ceilometermiddleware

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  ChangeLog  HACKING.rst  README.md  README.rst  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
ceilometermiddleware/: __init__.py  swift.py
ceilometermiddleware.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt  top_level.txt
ceilometermiddleware/tests/: test_swift.py
ceilometermiddleware/tests/data/: list_projects.yaml
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/swift/: ceilometer-config-generator.conf
releasenotes/notes/: background-thread-notifier-21b36a5f5c8dec0e.yaml  bug-1673738-ec8f7dd8ac43ad54.yaml  bug-1679196-ab9d6bb2134120e0.yaml  drop-py-2-7-21178ddd27b28806.yaml  start-using-reno-07376f6306754629.yaml
releasenotes/source/: conf.py  index.rst  newton.rst  ocata.rst
