[metadata]
name = ceilometermiddleware
summary = OpenStack Telemetry middleware for generating metrics
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://docs.openstack.org/developer/ceilometermiddleware
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    ceilometermiddleware

[entry_points]
paste.filter_factory =
    swift = ceilometermiddleware.swift:filter_factory

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ceilometermiddleware/locale
domain = ceilometermiddleware

[update_catalog]
domain = ceilometermiddleware
output_dir = ceilometermiddleware/locale
input_file = ceilometermiddleware/locale/ceilometermiddleware.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ceilometermiddleware/locale/ceilometermiddleware.pot
