[metadata]
name = ceilometermiddleware
summary = OpenStack Telemetry middleware for generating metrics
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/ceilometermiddleware/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    ceilometermiddleware

[entry_points]
paste.filter_factory =
    swift = ceilometermiddleware.swift:filter_factory

[compile_catalog]
directory = ceilometermiddleware/locale
domain = ceilometermiddleware

[update_catalog]
domain = ceilometermiddleware
output_dir = ceilometermiddleware/locale
input_file = ceilometermiddleware/locale/ceilometermiddleware.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ceilometermiddleware/locale/ceilometermiddleware.pot
